# krusty-kms

./: .coderabbit.yaml  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  cross-compat-vectors.json  greptile.json  krusty_kms_wasm.d.ts  krusty_kms_wasm.js  krusty_kms_wasm_bg.wasm  krusty_kms_wasm_bg.wasm.d.ts  package.json  prover-vectors.json
.cargo/: audit.toml
.githooks/: pre-commit
crates/: CLAUDE.md
crates/client/: Cargo.toml  README.md
crates/client/src/: abi.rs  account.rs  address.rs  contract.rs  discovery.rs  erc20.rs  events.rs  lib.rs  operations.rs  provider.rs  serialization.rs  staking.rs  types.rs  vesu.rs
crates/client/src/tx/: builder.rs  encode.rs  hash.rs  mod.rs
crates/client/src/wallet/: deploy.rs  eth.rs  mod.rs  utils.rs
crates/client/src/wallet/controller/: convert.rs  mod.rs  policy.rs
crates/client/tests/: account_derivation.rs  deploy_oz_account.rs  tongo_sepolia_integration.rs  tongo_sepolia_integration_view_key.rs
crates/common/: Cargo.toml
crates/common/src/: address.rs  amount.rs  chain.rs  error.rs  lib.rs  network.rs  secret_felt.rs  serialization.rs  starknet.rs  token.rs  types.rs  utils.rs  validator.rs
crates/controller/: Cargo.toml
crates/controller/src/: convert.rs  error.rs  lib.rs  policy.rs  tx_builder.rs  wallet.rs
crates/core/common/: Cargo.toml
crates/core/common/src/: error.rs  lib.rs  secret_felt.rs  types.rs  utils.rs
crates/core/kms/: Cargo.toml
crates/core/kms/src/: account.rs  derivation.rs  lib.rs  mnemonic.rs
crates/core/kms/tests/: debug_address.rs  key_derivation_vectors.rs  swift_parity_vectors.rs
crates/core/nostr-messaging/: Cargo.toml
crates/core/nostr-messaging/src/: lib.rs
crates/core/starknet-client/: Cargo.toml  README.md
crates/core/starknet-client/src/: contract.rs  lib.rs  operations.rs  provider.rs  serialization.rs  types.rs
crates/core/starknet-client/tests/: account_derivation.rs  tongo_sepolia_integration.rs  tongo_sepolia_integration_view_key.rs
crates/core/tongo-sdk/: Cargo.toml
crates/core/tongo-sdk/benches/: operations.rs  transfer_throughput.rs
crates/core/tongo-sdk/src/: account.rs  crypto.rs  lib.rs  operations.rs
crates/core/tongo-sdk/tests/: prover_vectors.rs
crates/crypto/: Cargo.toml
crates/crypto/benches/: crypto_primitives.rs  provers.rs
crates/crypto/src/: audit.rs  bit.rs  curve.rs  elgamal.rs  hash.rs  lib.rs  poe.rs  poe2.rs  random.rs  range.rs  scalar.rs
crates/crypto/tests/: fund_audit_test_vector.rs  test_vectors.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs  oracle.rs
crates/experimental/gaming-experimental/mental-poker/: AUDIT.md  Cargo.toml
crates/experimental/gaming-experimental/mental-poker-wasm/: Cargo.toml  build-wasm.sh
crates/experimental/gaming-experimental/mental-poker-wasm/src/: blackjack.rs  crossy.rs  deck.rs  error.rs  lib.rs  player.rs  types.rs
crates/experimental/gaming-experimental/mental-poker/benches/: mental_poker.rs
crates/experimental/gaming-experimental/mental-poker/src/: blackjack.rs  crossy.rs  deck.rs  error.rs  lib.rs  parallel.rs  protocol.rs  shuffle.rs  types.rs  utils.rs  zkp.rs
crates/experimental/gaming-experimental/mental-poker/tests/: equivalence.rs  fuzz.rs
crates/experimental/gaming-experimental/qb-game/: Cargo.toml
crates/experimental/gaming-experimental/qb-game/src/: commitment.rs  detection.rs  lib.rs  payoff.rs  types.rs  verification.rs
crates/ffi/: Cargo.toml
crates/ffi/kms-cabi/: Cargo.toml
crates/ffi/kms-cabi/src/: lib.rs
crates/ffi/src/: account.rs  address.rs  calldata.rs  coin_type.rs  derivation.rs  elgamal_ffi.rs  error.rs  felt.rs  handle.rs  hash.rs  helpers.rs  json_types.rs  lib.rs  mnemonic.rs  point.rs  proof.rs  signing.rs  types.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: backend.rs  clock.rs  lib.rs
crates/kms/: Cargo.toml
crates/kms/examples/: key_derivation.rs  nostr_sign.rs  oz_address.rs  stark_sign.rs
crates/kms/src/: account.rs  account_class.rs  derivation.rs  discovery.rs  encryption.rs  eth_signer.rs  keystore.rs  lib.rs  mnemonic.rs  nostr_signing.rs  stark_signing.rs  strk20.rs  tx_hash.rs  typed_data.rs
crates/kms/tests/: debug_address.rs  discovery_test.rs  key_derivation_vectors.rs  release_vectors.rs  swift_parity_vectors.rs  tx_hash_parity.rs  wasm_binding_vectors.rs
crates/kms/tests/fixtures/: account_class_vectors.json  coin_derivation_vectors.json  hashing_vectors.json  nostr_derivation_vectors.json  nostr_signing_vectors.json  tx_hash_parity_vectors.json
crates/oracle/: Cargo.toml
crates/oracle/src/: lib.rs
crates/oracle/tests/: golden.rs
crates/oracle/tests/fixtures/: derive_account.request.json  derive_account.response.json  invalid_request.response.json  protocol_info.request.json  protocol_info.response.json  sign.request.json  sign.response.json  sign_stark.request.json  sign_stark.response.json
crates/sdk/: Cargo.toml
crates/sdk/benches/: operations.rs  transfer_throughput.rs
crates/sdk/examples/: tongo_proof_generation.rs
crates/sdk/src/: account.rs  crypto.rs  lib.rs  operations.rs  serialization.rs
crates/sdk/tests/: cross_compat.rs  generate_vectors.rs  prover_vectors.rs
crates/sdk/tests/fixtures/: prover-vectors.json
crates/wallet-api/: Cargo.toml
crates/wallet-api/src/: lib.rs
crates/wasm/: Cargo.toml  build-wasm.sh
crates/wasm/kms-wasm/: Cargo.toml  README.md  build-wasm.sh
crates/wasm/kms-wasm/src/: lib.rs
crates/wasm/nostr-wasm/: Cargo.toml  README.md  build-wasm.sh
crates/wasm/nostr-wasm/src/: lib.rs
crates/wasm/she-core-wasm/: Cargo.toml  README.md  build-wasm.sh
crates/wasm/she-core-wasm/src/: lib.rs
crates/wasm/src/: account.rs  calldata.rs  discovery.rs  encryption.rs  error.rs  hashing.rs  lib.rs  proof.rs  signing.rs  strk20.rs  tx_hash.rs  types.rs  utils.rs
crates/wasm/tongo-wasm/: Cargo.toml  build-wasm.sh
crates/wasm/tongo-wasm/src/: account.rs  error.rs  lib.rs  proof.rs  types.rs
cross-tests/: package-lock.json  package.json
docs/: oracle-stdio-v1.md  (+2 more)
tools/rust-oracle/: Cargo.toml
tools/rust-oracle/src/: main.rs
(+170 files in other folders)
