[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/wallet-api",
    "crates/domain",
    "crates/gateway",
    "crates/oracle",
    "crates/kms",
    "crates/crypto",
    "crates/client",
    "crates/controller",
    "crates/sdk",
    "crates/wasm",
    "crates/experimental/gaming-experimental/mental-poker",
    "crates/experimental/gaming-experimental/mental-poker-wasm",
    "crates/experimental/gaming-experimental/qb-game",
    "crates/ffi",
]
default-members = [
    "crates/common",
    "crates/wallet-api",
    "crates/domain",
    "crates/gateway",
    "crates/kms",
    "crates/crypto",
    "crates/client",
    "crates/sdk",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.92"
authors = ["Krusty KMS Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/starknet-innovation/kms"
homepage = "https://github.com/starknet-innovation/kms"
keywords = ["cryptography", "kms", "starknet", "encryption"]
categories = ["cryptography"]

[workspace.dependencies]
starknet-types-core = { version = "0.2.0", features = ["hash"] }
bip39 = "2.2.0"
hmac = "0.12.1"
sha2 = "0.10.8"
sha3 = "0.10.8"
num-bigint = "0.4.6"
num-traits = "0.2.19"
num-integer = "0.1.46"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
hex = "0.4.3"
thiserror = "1.0.69"
rand = "0.8.5"
rand_core = "0.6.4"
rayon = "1.10.0"
proptest = "1.6.0"
criterion = "0.5.1"
tokio = "1.43.0"
zeroize = { version = "1.8", features = ["derive"] }
async-trait = "0.1"
chacha20poly1305 = "0.10"
scrypt = "0.11"
aes = "0.8"
ctr = "0.9"
[workspace.lints.clippy]
# Keep the shared lint policy deliberately small and high-signal.
borrow_as_ptr = "deny"
dbg_macro = "deny"
todo = "deny"
