[package]
name = "krusty-kms-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Starknet RPC client for interacting with TONGO contracts"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
krusty-kms-common = { version = "0.2.2", path = "../common" }
krusty-kms = { version = "0.2.2", path = "../kms" }
krusty-kms-sdk = { version = "0.2.2", path = "../sdk" }
krusty-kms-crypto = { version = "0.2.2", path = "../crypto" }
starknet-types-core.workspace = true
starknet-rust = "0.18.0"
tokio = { workspace = true, features = ["time", "sync", "macros"] }
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
thiserror.workspace = true
url = "2.5"
bs58 = "0.5"
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
