[package]
name = "krusty-kms-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Cryptographic primitives and zero-knowledge proofs for krusty-kms"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["parallel"]
parallel = ["rayon"]
test-utils = []

[dependencies]
krusty-kms-common = { version = "0.4.0", path = "../common" }
starknet-types-core.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
num-integer.workspace = true
sha2.workspace = true
sha3.workspace = true
rand.workspace = true
rand_core.workspace = true
rayon = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
thiserror.workspace = true
zeroize.workspace = true

# WASM support - ensure proper random number generation in browsers
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "provers"
harness = false

[[bench]]
name = "crypto_primitives"
harness = false

[lints]
workspace = true
