[package]
name = "krusty-kms-domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Pure integration-domain contracts for krusty-kms gateways and TUIs"

[dependencies]
krusty-kms-common = { path = "../common" }
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
starknet-types-core.workspace = true
thiserror.workspace = true
