[package]
name = "krusty-kms-cabi"
version.workspace = true
edition.workspace = true

[lib]
name = "kms"
crate-type = ["cdylib"]

[dependencies]
krusty-kms = { path = "../kms" }
krusty-kms-crypto = { path = "../crypto", default-features = false }
krusty-kms-common = { path = "../common" }
starknet-types-core = { workspace = true }
bip39 = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
