[package]
name = "krusty-kms-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Long-lived gateway runtime for krusty-kms TUIs and apps"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
krusty-kms-domain = { version = "0.3.0", path = "../domain" }
krusty-kms-common = { version = "0.3.0", path = "../common" }
krusty-kms = { version = "0.3.0", path = "../kms" }
krusty-kms-client = { version = "0.3.0", path = "../client" }
async-trait.workspace = true
num-bigint.workspace = true
starknet-rust = "0.18.0"
starknet-types-core.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
zeroize.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
