[package]
name = "krusty-kms"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Key Management System with BIP-44 derivation"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["parallel"]
parallel = ["krusty-kms-crypto/parallel"]

[dependencies]
krusty-kms-common = { version = "0.2.1", path = "../common" }
krusty-kms-crypto = { version = "0.2.1", path = "../crypto", default-features = false }
starknet-types-core.workspace = true
bip39.workspace = true
hmac.workspace = true
sha2.workspace = true
sha3 = "0.10"
num-bigint.workspace = true
num-traits.workspace = true
serde.workspace = true
hex.workspace = true
thiserror.workspace = true
rand.workspace = true
k256 = { version = "0.13", features = ["ecdsa"] }
zeroize.workspace = true

[dev-dependencies]
serde_json.workspace = true
