[package]
name = "krusty-kms"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Deterministic key derivation, account descriptors, and Stark/Nostr signing for krusty-kms"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["parallel"]
parallel = ["krusty-kms-crypto/parallel"]

[dependencies]
krusty-kms-common = { version = "0.4.0", path = "../common" }
krusty-kms-crypto = { version = "0.4.0", path = "../crypto", default-features = false }
starknet-types-core.workspace = true
bip39.workspace = true
hmac.workspace = true
sha2.workspace = true
sha3 = "0.10"
num-bigint.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
thiserror.workspace = true
rand.workspace = true
rand_core.workspace = true
k256 = { version = "0.13", features = ["ecdsa"] }
starknet-crypto = "0.8"
zeroize.workspace = true
chacha20poly1305.workspace = true
scrypt.workspace = true
aes.workspace = true
ctr.workspace = true

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
