[package]
name = "krusty-kms-wallet-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared wallet execution and transaction tracking API for krusty-kms"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
krusty-kms-common = { version = "0.4.0", path = "../common" }
starknet-rust = "0.18.0"
tokio = { workspace = true, features = ["time"] }
async-trait.workspace = true

[lints]
workspace = true
