[package]
name = "starknet-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Starknet RPC client for interacting with TONGO contracts"

[dependencies]
ghoul-common = { path = "../common" }
kms = { path = "../kms" }
tongo-sdk = { path = "../tongo-sdk" }
she-core = { path = "../she-core" }
starknet-types-core.workspace = true
starknet = "0.17.0"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
thiserror.workspace = true
url = "2.5"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
