[package]
name = "tongo-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "TONGO confidential transaction SDK for Starknet"

[features]
default = ["parallel"]
parallel = ["rayon", "she-core/parallel", "kms/parallel"]

[dependencies]
ghoul-common = { path = "../common" }
she-core = { path = "../she-core", default-features = false }
kms = { path = "../kms", default-features = false }
starknet-types-core.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
thiserror.workspace = true
rand.workspace = true
rayon = { workspace = true, optional = true }
chacha20poly1305 = "0.10"
sha2.workspace = true

[dev-dependencies]
serde_json.workspace = true
criterion.workspace = true

[[bench]]
name = "operations"
harness = false

[[bench]]
name = "transfer_throughput"
harness = false
