[package]
name = "kms-cabi"
version.workspace = true
edition.workspace = true

[lib]
name = "kms"
crate-type = ["cdylib"]

[dependencies]
kms = { path = "../../core/kms" }
she-core = { path = "../../core/she-core", default-features = false }
ghoul-common = { path = "../../core/common" }
starknet-types-core = { workspace = true }
bip39 = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
