[package]
name = "nostr-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WASM bindings for Nostr messaging"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
nostr-messaging = { path = "../../core/nostr-messaging" }
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
