[package]
name = "mental-poker-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WASM bindings for mental poker protocol - browser-compatible card game cryptography"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# Internal crates - NO parallelism for WASM
mental-poker = { path = "../mental-poker", default-features = false }
ghoul-common = { path = "../../../core/common" }
she-core = { path = "../../../core/she-core", default-features = false }

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Performance",
] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde-wasm-bindgen = "0.6"
hex.workspace = true

# Error handling
thiserror.workspace = true

# Better panic messages in WASM
console_error_panic_hook = { version = "0.1", optional = true }

# Starknet types (for Felt operations)
starknet-types-core.workspace = true

# Crypto
rand.workspace = true
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
